added TEX root = thesis-ex.tex to all files

--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis-ex.tex
+
 I would like to thank my advisors Professor Matthias Grosse Perdekamp and Anne Marie Sickles for their invaluable support and guidance throughout my time at the University of Illinois. Their experience as researchers was extremely valuable for myself and the rest of the group with whom I worked. I started working with Matthias as soon as I arrived in Illinois in 2013. I always appreciated his support, enthusiasm, and knowledge of physics. Besides his tremendous knowledge of nuclear and particle physics, Matthias is someone with whom one can discuss virtually anything; from politics to soccer. Anne was the driving force behind the ATLAS Heavy Ion group at Illinois. Thanks to her, it has grown into a strong group that contributes to the field in many different ways. It was a great experience to work for Matthias and Anne, and I thank them for providing me with the opportunity.
 
 Martin Rybar, who was the postdoctoral researcher in our group for the majority of  the time I spent working on the ATLAS experiment has been a great advisor and friend. He was always keen to share his knowledge of physics and analysis with me, was there to help whenever I needed it, and taught me a lot of what I know about ATLAS. I definitely progressed much faster in my research thanks to him, and I am very happy for anyone who will get the great opportunity to work with him in the future. 
