--- a/analysis.tex
+++ b/analysis.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis-ex.tex
+
 \subsection{Overview}
 In both the \pp\ and \pPb\ MC and data samples, two highest \pt\ jets are used to study azimuthal angular correlations. The measurement uses jets with transverse momentum between 28~GeV to 90~GeV. Due to the jet radius \RFour, the full coverage of the forward detector up to $|\eta|=4.9$ is reduced to cover only up to $4.5$ in pseudorapidity. Furthermore, due to the center-of-mass rapidity shift of $\Delta y$=0.465 in the \pPb\ collision system, the corresponding \ystar\ interval that is studied is approximately $-4.0<\ystar<4.0$. The \ystar\ interval used in the measurement is consistent in the \pp\ and \pPb\ collision systems. The final observables in this analysis are widths of dijet \conetwo\ distributions and conditional yields. The widths are sensitive to broadening between the leading and sub-leading jets and the yields show the number of dijets, given a leading jet in each \pT\ and \ystar\ kinematic region. 
 
