--- a/appendixQ.tex
+++ b/appendixQ.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis-ex.tex
+
 
 \section{Comparison of Results From Data and MC Samples}
 It is interesting to look at a comparison of results between data and MC samples in both collision systems. The \pp\ and \pPb\ MC samples are simulated using the same \pythiaeight\ tune which do not include saturation effects. Thus, in the \pp\ collision system, where nuclear effects are not expected to be present, there should not be a difference between results of data and MC simulations. The comparison between data and MC will be shown with no $\Delta\pt$ requirement, as it was seen to make no significant effect on previous measurements. A comparison of \conetwo\ distributions between data and MC simulations is plotted in the left and right columns of Figure~\ref{fig:finalplotsMCwidth} for \pp\ and \pPb\ systems respectively. There is no statistically significant difference between the results from data and MC samples for either collision system. A comparison of \ionetwo\ distributions between data and MC simulations is plotted in the left and right columns of Figure~\ref{fig:finalplotsMCyield} for \pp\ and \pPb\ systems respectively. The results in the proton going direction indicate that there are could be differences between the models and measured quantities. However, these differences are stronger in the \pPb\ system. This could mean that there are effects not yet described by the MC generator.
