--- a/appendixX.tex
+++ b/appendixX.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis-ex.tex
+
 \section{\conetwo\ distributions with no $\Delta \pt$ requirement }
 \begin{figure}[ht]
 	\centerline{
