--- a/contributions.tex
+++ b/contributions.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis-ex.tex
+
 \begin{itemize}
 \item Yakov Kulinich: Primary data analysis
 \item Martin Rybar: Analysis support, editor
