--- a/cuts.tex
+++ b/cuts.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis-ex.tex
+
 In both the \pp\ and \pPb\ MC and data samples, two highest \pt\ jets are used to study azimuthal angular correlations. This measurement uses jets with a transverse momentum from 28~GeV to 90~GeV, in a \ystar\ range from -4.0 to 4.0. The final observables in this analysis are widths of di-jet \Dphi\ distributions and conditional yields. The widths are sensitive to broadening between the leading and sub-leading jets and the yields show the number of di-jets, given a leading jet in each \pT\ and \ystar\ kinematic region. 
 
 The binning of this measurement is summarized in  Table~\ref{tab:binning} and is composed of different combinations of \ystarone, \ystartwo, \ptone, and \pttwo, where (\ystarone, \ptone) is the position and transverse energy of the leading jet, and (\ystartwo, \pttwo) is the position and transverse energy of the sub-leading jet. Since the measurement aims to probe low-x partons, only the interval $2.7<\ystarone<4.0$, which is the proton going direction in \pPb\ is used. In the 2016 \pPb\ Transverse momentum binning was chosen on the edges of \pt\ intervals used for different triggers in \pp. 
