--- a/data.tex
+++ b/data.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis-ex.tex
+
 The \pPb\ data used in this analysis were recorded in 2016 and the samples used are shown in Table~\ref{tab:datasamples} in the appendix. The LHC was configured with a 4 TeV proton beam and a 1.57~TeV per nucleon Pb beam  producing collisions with \sqrtsnn~=~5.02~TeV and a rapidity shift of the  nucleon-nucleon center-of-mass frame $\Delta y=-0.465$ relative to the lab frame. The data collected had one beam configuration with the Pb beam traveling to the positive pseudorapidity direction and the proton beam to the negative pseudorapidity direction. To be consistent with previous \pPb\ physics measurements~\cite{ATLAS:2014cpa,Aaboud:2017tke}, the positive center-of-mass rapidity direction, $\ystar>0$ is chosen as the proton beam direction. The physical detector is described in terms of $\eta$ and is consistent with conditions used during data-taking while the center-of-mass rapidity \ystar\ is the physics quantity in which results are presented. The integrated luminosity of the 2016 \pPb\ data taken is 360~\mubarn$^{-1}$. The \pp\ data used in this measurement was recorded in 2015 with the LHC configured to collide two equal energy proton going beams at a center-of-mass energy of \sqrts~=~5.02~TeV. These \pp\ and \pPb\ data samples are shown in Table~\ref{tab:datasamples} in the appendix. The instantaneous luminosity conditions provided by the LHC during \pPb\ data taking resulted in an average number of interactions per bunch crossing of 0.03. During \pp\ data taking, the average number of interactions per bunch crossing varied from 0.6 to 1.3. 
 
 The performance for measuring azimuthal angular correlations and conditional yields in both the 2015  \pp\ and 2016 \pPb\ data samples is evaluated with a 5.02~TeV \pp\ MC sample simulated using \pythia\ 8.212~\cite{Sjostrand:2014zea}. Hard scattering \pp\ events with the A14~\cite{ATLAS2014021} tune and the next-to-next order NNPDF23LO PDF set~\cite{Ball:2012cx} are used. The detector response is then simulated using GEANT4~\cite{Agostinelli:2002hh,Aad:2010ah}. The \pp\ samples used for this analysis contain approximately 12 million events, and are listed with their respective number of events in the top Table~\ref{tab:mcsamples} in the appendix. Corresponding \pPb\ MC samples are obtained by overlaying minimum-bias \pPb\ data events recorded during the 2016 data-taking period with simulated 5.02~TeV \pp\ events generated with the same MC tune as for the \pp\ MC sample but with a rapidity shift equivalent to that in the \pPb\ collisions. Detector response is also modeled using GEANT4. Due to the forward rapidity filtering, approximately 3 million events were used in the \pPb\ MC samples. These samples are listed in the middle of Table~\ref{tab:mcsamples} in the appendix, along with their respective number of events. Additionally, approximately 5 million events of the 5.02~TeV \pp\ \herwig~\cite{Bahr:2008pv} MC simulation are used to compare with the \pp\ \pythiaeight\ performance to determine the uncertainties on position resolution. The samples used in the \herwig\ MC, with their respective number of events are listed in the bottom of Table~\ref{tab:mcsamples} in the appendix.
