--- a/event.tex
+++ b/event.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis-ex.tex
+
 \subsection{General Cuts}
 For the analysis of \pp\ and \pPb\ data samples, the first level of filtering is via a Good Runs List (GRL) which is used to clean bad luminosity blocks (lumiblocks). All the data from every run is split up into these lumiblocks, which can hold thousands of events. Th GRL is compiled by the collaboration after data quality studies identifying issues with data-taking conditions have been performed after each run. The next step of filtering is at the event level where there is a minimum of one reconstructed vertex required for an event to pass. Additionally, DAQ errors due to the Scintillator Detector, Tile Calorimeter, and Liquid Argon calorimeters are checked for every event. If any of these detectors are flagged, or a primary vertex is not identified, the event is skipped. Next, events are chosen based on trigger decision.
 
