--- a/intro.tex
+++ b/intro.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis-ex.tex
+
 \section{Quantum Chromo-Dynamics}
 
 Quantum Chromo-Dynamics (QCD) is a relativistic non-abelian gauge theory, with symmetry group SU(3), which describes the strong interaction between quarks and gluons. Quarks are charged subatomic particles that are the fundamental constituents of matter and gluons are gauge bosons that are mediators of the strong interaction between quarks. In its form, QCD appears similar to QED~\cite{Seymour:2005hs}, however, since the gluons of the strong force carry color charge, solutions to the QCD Lagrangian become more complicated. The QCD Lagrangian~\cite{qcdbook} is 
