--- a/qualification.tex
+++ b/qualification.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis-ex.tex
+
 In order to qualify as an author in the ATLAS collaboration a task must be completed as a contribution to the experiment. The assigned task was to study the  impact of service material from the recent Insertable B-Layer (IBL) upgrade on the transverse momentum reconstruction in the forward region. Throughout this task, a large portion of the software required for the thesis analysis was developed because this specific qualification work was chosen with the currently proposed analysis in mind. 
 
 The IBL was installed during LS1 between 2013 and 2015. This new pixel detector was needed to achieve better vertex resolution during the higher luminosity Run 2. The service materials, which run out azimuthally from the beam-pipe in high pseudorapidity regions were found to have very high radiation lengths compared to the material previously there. This could have a negative impact on the forward calorimeter's performance.
