--- a/reconstruction.tex
+++ b/reconstruction.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis-ex.tex
+
 Jets are reconstructed using a heavy ion reconstruction procedure developed for previous jet measurements in Pb+Pb and \pPb\ collisions~\cite{ATLAS:2014cpa,Aaboud:2017tke}. The jet reconstruction is first run in four-momentum recombination mode, on $\Delta \eta \times \Delta \phi = 0.1\times 0.1$ calorimeter towers with the \antikt\ algorithm~\cite{Cacciari:2008qp} with $R=0.4$. Energies in the towers are obtained by summing the energies of calorimeter cells at the electromagnetic energy scale within the tower boundaries. Then, an iterative procedure is used to estimate the layer and $\eta$-dependent underlying event (UE) transverse energy density, while excluding the regions populated by jets. The UE transverse energy is subtracted from each calorimeter tower and the four-momentum of the jet is updated accordingly. Jets which do not overlap with the region included in the UE background subtraction also have a small correction applied on the order of a few percent. Then, a jet $\eta-$ and \pT-dependent  correction factor derived from the simulation samples is applied to correct for the calorimeter response. These factors are derived by the ATLAS Jet \Et\ Miss (JetEtMiss) group and are standard corrections used in all analyses. An additional data driven correction based on \textit{in situ} studies of the momentum balance of jets recoiling against photons, $Z$ bosons, and jets in other regions of the calorimeter is also applied ~\cite{Aad:2011he,Run2jetpubnote}.
 
 Jets are selected in the transverse momentum range of $28<\pT<90$ GeV and a center-of-mass rapidity of $-4.0<\ystar<4.0$. This is the largest symmetric overlap between the two colliding systems for which most forward jets can be reconstructed using the FCal with full coverage for \RFour\ jets. All reconstructed jets are required to  have a \pT\ such that the jet trigger efficiency is greater than 99\%. As a result, no trigger efficiency correction is applied. 
