--- a/setup.tex
+++ b/setup.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis-ex.tex
+
 \section{LHC}
 The Large Hadron Collider (LHC)~\cite{Evans:2008zzb} was built by the European Organization for Nuclear Research (CERN) and is located on the France-Switzerland border outside of Geneva. The LHC is designed to collide beams of protons at a center of mass energy up to \sqrts=14 TeV and beams of lead ions at a center-of-mass energy per nucleon up to \sqrtsnn=8.16 TeV. It is the largest of many accelerators that constitute the the CERN accelerator complex, pictured in Fig.~\ref{fig:cern}. 
 
