--- a/summary.tex
+++ b/summary.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis-ex.tex
+
 This dissertation presents measurements of dijet azimuthal angular correlations along with their widths and the conditional yields of leading and sub-leading jets in \pPb\ collisions and \pp\ collisions at $\sqrt{s}=5.02$~TeV. The measurement utilizes pairs of leading and sub-leading \RFour\ \antikt\ jets in the transverse momentum range of $28 < \pT < 90$~GeV. The shapes of azimuthal angular correlations, \conetwo\, for forward-forward and forward-central dijets and conditional yields could be sensitive to possible effects of gluon saturation at low-\xb~\cite{Kutak:2013yga,Kutak:2014wga}. Dijets where both jets are very far forward probe $\xb\approx10^{-5}$ at this collision energy.
 
 The widths of the azimuthal correlations are found to be smaller for pairs of jets with higher $\ptone, \pttwo$ and the widths increase with the increasing rapidity interval between the leading and sub-leading jet. No significant broadening of azimuthal angular correlations is observed for forward-forward and forward-central dijets in \pPb\ compared to \pp\ collisions within the uncertainties.  However, the measurement of conditional yields of jet-pairs for forward-forward jets in \pPb\ collisions compared to \pp\ collisions shows a suppression of approximately 20\%, with no significant dependence on jet \pt\ and \ystar.   The uncertainty on this ratio is dominated by systematic uncertainties, which are correlated in jet \pt\ and \ystar. The observed suppression of \ippb\ indicates possible saturation effects for the higher gluon densities expected in the Pb-nucleus at low-\xb.
