--- a/systematics.tex
+++ b/systematics.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis-ex.tex
+
 \subsection{Overview}
 This section gives an overview of the major sources of systematic uncertainties on the \pp\ and \pPb\ azimuthal angular correlations. Careful treatment of these known variations is necessary for a precise physics result. The systematic uncertainties in the measurement originate from:
 
