--- a/symbols.tex
+++ b/symbols.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis-ex.tex
+
 \begin{symbollist*}
 \item[$z$] Cartesian coordinate defined to be in the direction of the LHC beam direction.
 \item[$x-y$] Cartesian coordinates defined to be perpendicular to the LHC beam direction.
