done LHC section

--- a/macros.tex
+++ b/macros.tex
@@ -1,3 +1,7 @@
+\newcommand{\radlen}{\mbox{$X_{0}$}}
+\newcommand{\intlen}{\mbox{$\lambda_{I}$}}
+
+
 \newcommand\blfootnote[1]{%
   \begingroup
   \renewcommand\thefootnote{}\footnote{#1}%
