--- a/setup.tex
+++ b/setup.tex
@@ -1,24 +1,111 @@
 % !TEX root = thesis-ex.tex
 
-\section{LHC}
-The Large Hadron Collider (LHC)~\cite{Evans:2008zzb} was built by the European Organization for Nuclear Research (CERN) and is located on the France-Switzerland border outside of Geneva. The LHC is designed to collide beams of protons at a center of mass energy up to \sqrts=14 TeV and beams of lead ions at a center-of-mass energy per nucleon up to \sqrtsnn=8.16 TeV. It is the largest of many accelerators that constitute the the CERN accelerator complex, pictured in Fig.~\ref{fig:cern}. 
+\section{The Large Hadron Collider}
+
+The Large Hadron Collider (LHC) is part of the European Organization for Nuclear Research. It has a circumference of 27 kilometers, making it the world's largest particle accelerator, and is housed in a tunnel that is up to 175 meters below the surface of the earth. The LHC has eight arcs and eight straight sections, with each straight section being approximately 528 m long. The arc sections are built using 1232 dipole superconducting magnets, providing a magnetic field of up to 8.33 T. Another 392 quadrupole magnets are used for focussing the beam. The magnets are cooled down to 1.9 K via liquid Helium. The LHC beam pipe has two rings with counter-rotating beams and uses a uses a twin-bore magnet design that optimizes for both cost, as well as space. The counterrotating beams require opposite magnetic dipole fields in both rings, with separate magnetic and vacuum chambers, with the common sections only at the insertion regions, where the major experimental detectors are located. These detectors are: A Toroidal LHC Apparatus (ATLAS), Compact Muon Solenoid (CMS), A Large Ion Collider Experiment (ALICE), and Large Hadron Collider - Beauty (LHCb) \cite{Evans:2008zzb}.
+
+Capable of reaching up to center of mass energies, \sqrts\ = 14 TeV for protons and \sqrtsnn\ = 5.5 TeV for lead ions, the LHC delivers up to $10^{34} \mathrm{cm}^2\mathrm{s}^1$ of luminosity to the ATLAS and CMS detectors when colliding protons. The LHCb detector is a lower luminosity experiment, that receives up to $10^{32} \mathrm{cm}^2\mathrm{s}^1$, and ALICE, a dedicated ion experiment aims at a peak luminosity of $10^{27} \mathrm{cm}^2\mathrm{s}^1$ for nominal lead-lead operation. The beams in the LHC are accelerated by 16 radio frequency (RF) cavities that provide a voltage of 2 MV and operate at 400 MHz. They consist of bunches of protons or ions that are kept in their circular path by the dipole magnets, and focussed via the quadrupole magnets, 
+
+%It has two transfer tunnels, approximately 2.5 km in length, that connect it to the accelerator complex shown in Fig.~\ref{fig:cern}. Built in the tunnel originally used for the Large Electron-Positron Collider, the LHC was designed to collide protons at center of mass energies of up to 14 TeV. It 
+
+A schematic of the entire accelerator complex and the path followed by protons and heavy ions is show in Fig.~\ref{fig:cern}.  Protons are obtained by stripping the hydrogen atom of its electrons via an electric field. The complete ionization of lead is done in multiple stages, with the first stage providing for $\mathrm{Pb}^{+29}$ via an ion source. Both the protons and heavy ions are then are accelerated by increasingly powerful accelerators, until they reach the main LHC beam pipes. Protons start at LINAC 2 (LINear ACcelerator), whereas the lead ions start at LINAC 3. The $\mathrm{Pb}^{+29}$ lead ions are further stripped of electrons by passing them through a 0.3 $\mu$m foil after the LINAC 3. The $\mathrm{Pb}^{+54}$ ions are selected via mass spectrometer and sent to the Low Energy Ion Ring (LEIR), whereas the protons are sent to the Booster. They are then sent to the Proton Synchrotron (PS), followed by the Super Proton Synchrotron (SPS), and then finally the LHC. The final stripping of lead ions takes place after the PS, on a 0.8 mm thin aluminum foil.
+
+%The LHC beams consist of 
+%The LHC delivered an integrated luminosity of 0.49 \pb\ of \pbpb\ and 25 \pb\ of \pp\ data in 2015.
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=0.60\textwidth]{figures/cern.jpg} %
-	\caption{The accelerator complex at CERN. ATLAS can be seen inside the SPS on the LHC ring. Figure taken from Ref.~\cite{cernlhc}}
+	\includegraphics[width=1.\textwidth]{figures/cern.jpg} %
+	\caption{The accelerator complex at CERN. ATLAS can be seen inside the SPS on the LHC ring. Figure taken from Ref.~\cite{TEEPCLPC}}
 	\label{fig:cern}%
 \end{figure}
 
-During the LHC's first operational data taking run, referred to as Run 1 (2009-2013), the first collisions with stable beams were observed between protons and protons (\pp), as well as protons with lead ions (\pPb) at center of mass energies of \sqrts=8 TeV and \sqrtsnn=2.76 TeV, respectively. Center of mass energies for \pPb\ collisions were subsequently increased to \sqrtsnn=5.02 TeV in 2013. After an extended technical shutdown for upgrades following Run 1, the LHC was restarted for run Run 2, during which \pp\ and \pPb\ collisions with stable beams were observed at center-of-mass energies of \sqrts=13 TeV and \sqrtsnn=8.16 TeV, respectively. 
 
-The LHC is located in a tunnel at depths of 50 to 175 m underground. Originally, this tunnel was built for the Large Electron-Proton Collider (LEP), an electron-proton collider that was operation from 1989-2000. In the LHC, particle packets in high vacuum beam pipes going in opposite directions are accelerated by 8 radio frequency cavities (RF) which deliver voltages up to 2 MV at an oscillator frequency of 400 MHz. Each 26.7 km ring consists of eight arched sections with 616 dipole super-conducting magnets per beam, which supply fields of up to 8.33 Tesla. An additional 196 beam focusing quadropole magnets per beam serve to narrow the beam and increase luminosity. To supply such high magnetic fields, LHC magnets use super-fluid helium and operate at temperatures down to 1.9 K while the RF cavities operate at temperatures down to 4.5 K.
+%%%%%%%%%%YK%%%%%%%%
 
-Any proton or lead ion entering the LHC must go through the complex chain of accelerators shown in  Fig.~\ref{fig:cern}. In order to be accelerated and focused in the beams, the proton and lead ions are required to have a net positive charge. Thus, the hydrogen and lead atoms must be first stripped of the electrons in their atomic shells. Positively charged protons are obtained by stripping atoms of hydrogen gas from their electrons using an electric field. Positively charged lead ions are initially extracted from a source which provides partially stripped lead ions with an average around $\mathrm{Pb^{29+}}$. These ions then go through a series of pre-accelerators, seen at the bottom of Fig.~\ref{fig:cern}, starting with the Linear Accelerator 3 (LINAC3) where they are further stripped of electrons by passing through $3.0\ \mu$m  of carbon foil. Next, a mass spectrometer selects lead ions with an average $\mathrm{Pb^{29+}}$ to be fed into the Low Energy Ion Ring (LEIR). The protons, meanwhile, begin their journey at the Linear Accelerator 2 (LINAC2). Both protons and lead ions then enter the next phase of pre-accelerators which consist of the Proton Synchrotron (PS) and the Super Proton Synchrotron (SPS), where they continue to be  accelerated. The lead ions are completely stripped away of remaining electrons at the exit of the PS, where they pass through 0.8 mm aluminum foil. The final stage is at the exit of the SPS where the protons and lead ions enter the LHC for the final phase of acceleration before they are collided.
- 
-Beams in the LHC consist of 2808 bunches of protons or lead ions with bunch spacing down to 25 ns (7.5 m). A proton bunch contains approximately 1.15x$10^{11}$ protons while an ion bunch contains approximately 2.2x$10^{8}$ ions. These beams are brought to collide at four interaction points which can be seen along the circumference of the LHC in Fig.~\ref{fig:cern}. At these interaction points there are detectors present to analyze the collisions: A Large Ion Collider Experiment (ALICE), A Toroidal LHC Apparatus (ATLAS), Compact Muon Solenoid (CMS), and the Large Hadron Collider Beauty (LHCb).
+%During the LHC's first operational data taking run, referred to as Run 1 (2009-2013), the first collisions with stable beams were observed between protons and protons (\pp), as well as protons with lead ions (\pPb) at center of mass energies of \sqrts=8 TeV and \sqrtsnn=2.76 TeV, respectively. Center of mass energies for \pPb\ collisions were subsequently increased to \sqrtsnn=5.02 TeV in 2013. After an extended technical shutdown for upgrades following Run 1, the LHC was restarted for run Run 2, during which \pp\ and \pPb\ collisions with stable beams were observed at center-of-mass energies of \sqrts=13 TeV and \sqrtsnn=8.16 TeV, respectively. 
+%
+%The LHC is located in a tunnel at depths of 50 to 175 m underground. Originally, this tunnel was built for the Large Electron-Proton Collider (LEP), an electron-proton collider that was operation from 1989-2000. In the LHC, particle packets in high vacuum beam pipes going in opposite directions are accelerated by 8 radio frequency cavities (RF) which deliver voltages up to 2 MV at an oscillator frequency of 400 MHz. Each 26.7 km ring consists of eight arched sections with 616 dipole super-conducting magnets per beam, which supply fields of up to 8.33 Tesla. An additional 196 beam focusing quadropole magnets per beam serve to narrow the beam and increase luminosity. To supply such high magnetic fields, LHC magnets use super-fluid helium and operate at temperatures down to 1.9 K while the RF cavities operate at temperatures down to 4.5 K.
+%
+%Any proton or lead ion entering the LHC must go through the complex chain of accelerators shown in  Fig.~\ref{fig:cern}. In order to be accelerated and focused in the beams, the proton and lead ions are required to have a net positive charge. Thus, the hydrogen and lead atoms must be first stripped of the electrons in their atomic shells. Positively charged protons are obtained by stripping atoms of hydrogen gas from their electrons using an electric field. Positively charged lead ions are initially extracted from a source which provides partially stripped lead ions with an average around $\mathrm{Pb^{29+}}$. These ions then go through a series of pre-accelerators, seen at the bottom of Fig.~\ref{fig:cern}, starting with the Linear Accelerator 3 (LINAC3) where they are further stripped of electrons by passing through $3.0\ \mu$m  of carbon foil. Next, a mass spectrometer selects lead ions with an average $\mathrm{Pb^{29+}}$ to be fed into the Low Energy Ion Ring (LEIR). The protons, meanwhile, begin their journey at the Linear Accelerator 2 (LINAC2). Both protons and lead ions then enter the next phase of pre-accelerators which consist of the Proton Synchrotron (PS) and the Super Proton Synchrotron (SPS), where they continue to be  accelerated. The lead ions are completely stripped away of remaining electrons at the exit of the PS, where they pass through 0.8 mm aluminum foil. The final stage is at the exit of the SPS where the protons and lead ions enter the LHC for the final phase of acceleration before they are collided.
+% 
+%Beams in the LHC consist of 2808 bunches of protons or lead ions with bunch spacing down to 25 ns (7.5 m). A proton bunch contains approximately 1.15x$10^{11}$ protons while an ion bunch contains approximately 2.2x$10^{8}$ ions. These beams are brought to collide at four interaction points which can be seen along the circumference of the LHC in Fig.~\ref{fig:cern}. At these interaction points there are detectors present to analyze the collisions: A Large Ion Collider Experiment (ALICE), A Toroidal LHC Apparatus (ATLAS), Compact Muon Solenoid (CMS), and the Large Hadron Collider Beauty (LHCb).
+%%%%%%%%%%YKend%%%%%%%%
 
-\section{ATLAS Experiment}
+
+\section{The ATLAS Detector}
+
+The ATLAS detector (Fig.~\ref{fig:atlas}) is a general purpose detector at the LHC. It is symmetric in the forward-backward direction, and has a full $2\pi$ coverage in azimuth. It uses a right-handed coordinate system with its origin at the nominal interaction point (IP) in the centre of the detector and the $z$-axis along the beam pipe. The $x$-axis points from the IP to the centre of the LHC ring, and the $y$ axis points upward. Cylindrical coordinates $(r,\phi)$ are used in the transverse plane, $\phi$ being the azimuthal angle around the beam pipe. The pseudorapidity is defined in terms of the polar angle $\theta$ as $\eta=-\ln\tan(\theta/2)$.}
+
+The A side of the detector is defined as having positive $z$, withe C side being defined as having negative $z$. 
+
+It has three main subsystems: the inner detector, the calorimeter, and the muon spectrometer. This paper will only discuss the inner detector and the calorimeter, since those are the systems that will be used in the analysis.
+
+\footnote{
+ATLAS uses a 
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.7\textwidth]{figures/atlas.pdf} %
+	\caption{The ATLAS detector. Figure taken from Ref.~\cite{Aad:2008zzm}.}	
+	\label{fig:atlas}%
+\end{figure}
+
+
+\subsubsection{Inner Detector}
+The inner detector (Fig.~\ref{fig:inner_det}) is designed to reconstruct the charged particle trajectories in the interval $|\eta| < 2.5$ . This is achieved by a combination of three subsystems: the Pixel detector, the Semiconductor Tracker (SCT), and the straw-tube Transition Radiation Tracker (TRT), all immersed in a 2T magnetic field \cite{Aad:2008zzm}.
+
+The pixel detector consists of four layers of pixels, with the innermost layer at a distance of 33.25 mm from the interaction point. The expected hit resolution of the pixel detector ranges from of $\sim$ 8$\mu$m ($\sim$ 40$\mu$m) in $r-\phi$ ($z$) \cite{ibl_design} for the innermost layer, to $\sim$ 10$\mu$m ($\sim$ 115$\mu$m) in $r-\phi$ ($z$) for the next three layers \cite{Aad:2008zzm}.
+
+The SCT has eight strip (80 $\mu$m pitch) layers that are crossed by each track. Small angle stereo strips are used to measure both coordinates, with one set of strips in each layer, parallel to the beam direction. The end cap region has nine layers of double sided modules with strips in the radial direction, with each also having a mean pitch of 80 $\mu$m. The intrinsic resolution is $\sim$ 17$\mu$m ($\sim$ 580$\mu$m) in $r-\phi$ ($z$)  \cite{Aad:2008zzm}.
+
+The TRT contains 73 (160) layers of straws and fibers in the barrel (end-cap), and provides a large number of hits per track, allowing track-following for $|\eta| <  2.0$. T. It has a resolution of $\sim$ 130$\mu$m in $r-\phi$, with no information in the $z$ direction \cite{Aad:2008zzm}.
+
+ \begin{figure}[htbp!]
+    \centering
+      \begin{subfigure}{0.44\textwidth}
+        \includegraphics[width=\textwidth]{inner_det.png}
+          \caption{ATLAS Inner Detector System}
+          \label{fig:inner_det}
+      \end{subfigure}
+      \hfill
+      \begin{subfigure}{0.49\textwidth}
+        \includegraphics[width=\textwidth]{calorimeters.png}
+          \caption{A cut-away view of the ATLAS calorimeter system. Taken from \cite{Aad:2008zzm}}
+          \label{fig:cal}
+      \end{subfigure}
+\caption{
+\label{fig:atlas_systems}%
+ATLAS Inner detector and calorimeter systems}
+\end{figure}
+
+
+\subsubsection{Calorimeter}
+The calorimeter system (Fig.~\ref{fig:cal}) covers the region $|\eta| < 4.9$, using different techniques over different ranges.
+
+The sampling liquid argon (LAr) electromagnetic calorimeter (EMCal) covers $|\eta| < 3.2$ (the barrel region for $|\eta| < 1.475$ and two end caps for $1.375 < |\eta| < 3.2$) . Its accordion-like geometry provides full $\phi$ symmetry without azimuthal cracks. The EMCal is segmented longitudinally into three layers, plus a pre-sampler, with the granularity varying as a function of layer depth and pseudorapidity. The presampler ($|\eta| <1.8$) compensates for the energy lost by photons and electrons upstream of the calorimeter \cite{Aad:2008zzm}.  
+
+The hadronic calorimeters (HCal) consist of the Tile, Hadronic End Cap (HEC), and the Forward Calorimeters (FCal). The Tile is placed directly outside the EMCal, covering $|\eta| < 1.0$, with the extended barrels covering the range $0.8 <|\eta|< 1.7$. It uses steel as the absorber and scintillating tiles as the active material. It has three layers, with the two sides of the tiles being read out by wavelength shifting fibers into separate photomultiplier tubes. The HEC consists of two wheels per cap, and is directly behind the EMCal end cap. It covers $1.5< |\eta| < 3.2$, overlapping both the tile and the FCal (at $|\eta| =  3.1$). The active material in the HEC is LAr (with copper plates acting as the absorber). The FCal, ranging from $3.1 < |\eta| < 4.9$, consists of three modules in each end cap; the first, made of copper, is optimized for electromagnetic interactions, while the other two, made of tungsten, are optimized for hadronic measurements \cite{Aad:2008zzm}.
+
+
+\iffalse
+The $\eta$ coverage of the different detector systems can be seen in Fig.~\ref{fig:atlaspseudorap}.
+\begin{figure}[htbp!]
+	\centering
+	\includegraphics[width=0.7\textwidth]{atlaspseudorap.png} %
+	\caption{$\eta$ acceptance of the ATLAS detector.}	
+	\label{fig:atlaspseudorap}%
+\end{figure}
+\fi
+
+
+
+
+
+
+
+
+
 
 
 \begin{figure}[ht]
