--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -105,11 +105,12 @@ For my Mother, Father, and Brother
 
 \chapter{Introduction}
 \input{thesisintro.tex}
-
-%\chapter{Experimental Setup}
-%\label{sec:setup}
-%\input{setup.tex}
+\chapter{Experimental Setup}
+\label{sec:setup}
+\input{setup.tex}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 %\chapter{Theoretical Introduction}
 %\label{sec:intro}
 %\input{intro.tex}
