working on ATLAS section, done with intro

--- a/setup.tex
+++ b/setup.tex
@@ -35,13 +35,33 @@ A schematic of the entire accelerator complex and the path followed by protons a
 
 \section{The ATLAS Detector}
 
-The ATLAS detector (Fig.~\ref{fig:atlas}) is a general purpose detector at the LHC. It is symmetric in the forward-backward direction, and has a full $2\pi$ coverage in azimuth. It uses a right-handed coordinate system with its origin at the nominal interaction point (IP) in the centre of the detector and the $z$-axis along the beam pipe. The $x$-axis points from the IP to the centre of the LHC ring, and the $y$ axis points upward. Cylindrical coordinates $(r,\phi)$ are used in the transverse plane, $\phi$ being the azimuthal angle around the beam pipe. The pseudorapidity is defined in terms of the polar angle $\theta$ as $\eta=-\ln\tan(\theta/2)$.}
+The ATLAS detector (Fig.~\ref{fig:atlas}) is a general purpose detector at the LHC. It uses a right-handed coordinate system with its origin at the nominal interaction point (IP) in the centre of the detector and the $z$-axis along the beam pipe. The $x$-axis points from the IP to the centre of the LHC ring, and the $y$ axis points upward. Cylindrical coordinates $(r,\phi)$ are used in the transverse plane, $\phi$ being the azimuthal angle around the beam pipe. The pseudorapidity is defined in terms of the polar angle $\theta$ as $\eta=-\ln\tan(\theta/2)$.
 
-The A side of the detector is defined as having positive $z$, withe C side being defined as having negative $z$. 
+The detector was designed keeping in mind the goals of the physics it aimed to explore, and as such has the following characteristics:
+\begin{itemize}
+\item Fast, radiation-hard electronics and sensor
+\item Fine granularity to be able to manage large particle fluxes
+\item Large acceptance in pseudorapidity and full azimuthal coverage
+\item Good electromagnetic calorimetry for photon and electron identification
+\item Good hadron calorimetry for accurate jet and missing transverse energy measurements
+\item Good muon identification and momentum resolution
+\item Highly efficient trigger system 
+\end{itemize}
+
+The ATLAS detector has a magnet configuration that consists of a thin superconducting solenoid surrounding the inner detector cavity, and three large superconducting toroids arranged symmetrically around the calorimeters. The inner detector is immersed in a 2 T magnetic field, and achieves pattern recognition, momentum and vertex measurements, and electron identification by a combination of high resolution semiconductor pixel and strip detectors in the inner tracking volume, and a straw tube detector for transition radiation in the outer volume. 
+
+High granularity liquid-argon (LAr) electromagnetic sampling calorimeters cover the pseudorapidity range $|\eta| < 3.2$. The hadronic calorimeter ( $|\eta| < 1.7$ is provided by the scintillator-tile calorimeter that has a barrel and two end cap sections. Forward calorimeters using LAr technology extend the electromagnetic and hadronic energy measurements out to $|\eta| = 4.9$.
+
+The calorimeter system is surrounded by the muon spectrometer, comprising of an air-core toroid system with a barrel and two end caps. These provide for strong bending in a large volume, thereby minimizing scattering. Good momentum resolution is achieved by three layers of high precision tracking chambers. 
+
+
+
+The end caps ($|\eta| > 1.5$) also use LAr technology 
+
 
 It has three main subsystems: the inner detector, the calorimeter, and the muon spectrometer. This paper will only discuss the inner detector and the calorimeter, since those are the systems that will be used in the analysis.
 
-\footnote{
+
 ATLAS uses a 
 
 \begin{figure}[ht]
