--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -16,7 +16,8 @@
 	sorting=none
 ]{biblatex}
 \usepackage{hyperref}
-
+\usepackage{subcaption}
+\captionsetup{compatibility=false}
 \input{macros}
 
 \addbibresource{thesis-ex.bib}
